# Prog4Pokemon

./: FLINT N STEEL.C  README.md  baseDeDatos.c  baseDeDatos.h  ficheros.c  movement.h++  player.c++  player.h++  pokemon.c++  pokemon.h++  type.h++
C/: baseDeDatos.c  baseDeDatos.h  category.c  category.h  config.txt  db.c  db.h  ficheros.h  files.c  files.h  funciones.c  funciones.h  main.c  moduleMenus.c  moduleMenus.h  moduloMenus.c  moduloMenus.h  movement.c  movement.h  pc.c  pc.h  player.c  player.h  pokemon.c  pokemon.h  server.c  status.c  status.h  type.c  type.h
C++/: category.hpp  movement.cpp  movement.hpp  pc.h++  pc.hpp  player.h++  player.hpp  pokemon.c++  pokemon.cpp  pokemon.h++  pokemon.hpp  status.h++  status.hpp  type.h++  type.hpp
CPP/: CombateWindow.cpp  CombateWindow.h  MainMenuWindow.cpp  MainMenuWindow.h  PresentacionWindow.cpp  PresentacionWindow.h  client.cpp  main.cpp  pokemonpresentacion.cpp  pokemonpresentacion.h
CPP/Transfer/: MESSAGE_TYPE.h  MOVEMENT_SERIALIZATION.h  PC_SERIALIZATION.h  PLAYER_SERIALIZATION.h  POKEMON_PLAYER_BATTLE_SERIALIZATION.h  POKEMON_SERIALIZATION.h  SEND_RECEIVE_STRUCTS.h  SOCKET_HELPERS.h
DB/: README.md  SCPokemon.db  pokemon.db
GUI/: CMakeLists.txt  CombateWindow.ui  MainMenuWindow.ui  PresentacionWindow.ui  loginwindow.ui  pokemonpresentacion.ui
